# fia-docs-api

./: Cargo.toml
.github/workflows/: build.yml
src/: error.rs  main.rs
src/middleware/: academy.rs  mod.rs  parser.rs  runner.rs
tools/: docker-build.rs  docker-push.rs
