[package]
name = "fia-docs-api"
version = "1.1.1"
edition = "2024"
default-run = "fia-docs-api"

[[bin]]
name = "docker-build"
path = "tools/docker-build.rs"

[[bin]]
name = "docker-push"
path = "tools/docker-push.rs"

[dependencies]
aws-sign-v4 = { git = "https://github.com/MarkusTheOrt/aws-sign-v4", version = "0.3.0" }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
f1-bot-types = { git = "https://codeberg.org/MTO/f1-bot-types", version = "0.1.1" }
html5ever = "0.31.0"
libsql = "0.9.6"
reqwest = "0.12.12"
sentry = { version = "0.38.0", features = ["tracing"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.5.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
